# libgoban

./: .gitignore  README.md  pyproject.toml
libgoban/: __init__.py  __main__.py  board.py  cli.py  game.py
tests/: test_board.py  test_point.py
