[project]
name = "libgoban"
version = "0.1.2"
description = "A Python library for working with the game of Go"
license = { text = "GPL-3.0-or-later" }
authors = [
    {name = "J. Alex Long", email = "jalexlong@proton.me"},
]
keywords = [
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
dynamic = [ "classifiers" ]

[tool.poetry]
classifiers = [
  "License :: OSI License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Games/Entertainment :: Board Topic :: Games/Entertainment :: Board Games",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"